# Fleet

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
app/: CMakeLists.txt
app/resources/: app_resources.qrc
app/sources/: main.cpp
app/sources/presentation/gui_style_manager/: gui_style_manager.cpp  gui_style_manager.h
app/sources/presentation/main_presenter/: i_main_presenter.h  qml_main_presenter.cpp  qml_main_presenter.h
app/sources/qml/: MainView.qml
core/: CMakeLists.txt
core/tests/: CMakeLists.txt  tests.cpp
